--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@1,100;1,300;1,400;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@1,100;1,300;1,400;1,700;1,900&display=swap'); */
+
+@font-face {
+  font-family: 'Lato';
+  font-weight: normal;
+  src: url('./assets/font/Lato-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-weight: 300;
+  src: url('./assets/font/Lato-Light.ttf');
+}
+
+@font-face {
+  src: url('./assets/font/Lato-Bold.ttf');
+  font-family: 'Lato';
+  font-weight: 600;
+}
+
+@font-face {
+  src: url('./assets/font/Lato-Black.ttf');
+  font-family: 'Lato';
+  font-weight: 900;
+}
 
 body {
   margin: 0;
-  font-family: 'Lato', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato' !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #434350;
+}
+
+* {
+  font-family: 'Lato' !important;
 }
 
 code {
@@ -13,8 +41,13 @@ code {
     monospace;
 }
 
-a{
+a,
+a b {
+  color: inherit;
   text-decoration: none;
+}
+a:active {
+  background: inherit;
 }
 a:visited {
   text-decoration: none;
@@ -25,14 +58,18 @@ a:visited {
   display: none !important;
 }
 
-.swiper-button-next, .swiper-button-prev {
-  color:white !important;
+.swiper-button-next,
+.swiper-button-prev {
+  color: #49E2FF !important;
 }
 
 
 /* Icon 1 */
 
-#nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
+#nav-icon1,
+#nav-icon2,
+#nav-icon3,
+#nav-icon4 {
   width: 60px;
   height: 45px;
   position: relative;
@@ -48,7 +85,9 @@ a:visited {
   cursor: pointer;
 }
 
-#nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
+#nav-icon1 span,
+#nav-icon3 span,
+#nav-icon4 span {
   display: block;
   position: absolute;
   height: 9px;
@@ -103,7 +142,7 @@ a:visited {
 /* Icon 2 */
 
 #nav-icon2 {
-  margin:inherit;
+  margin: inherit;
   position: relative;
   z-index: 10000000000000;
 }
@@ -131,30 +170,35 @@ a:visited {
 }
 
 #nav-icon2 span:nth-child(odd) {
-  left:0px;
+  left: 0px;
   border-radius: 9px 0 0 9px;
 }
 
-#nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
+#nav-icon2 span:nth-child(1),
+#nav-icon2 span:nth-child(2) {
   top: 0px;
 }
 
-#nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
+#nav-icon2 span:nth-child(3),
+#nav-icon2 span:nth-child(4) {
   top: 18px;
 }
 
-#nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
+#nav-icon2 span:nth-child(5),
+#nav-icon2 span:nth-child(6) {
   top: 36px;
 }
 
-#nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
+#nav-icon2.open span:nth-child(1),
+#nav-icon2.open span:nth-child(6) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
-#nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
+#nav-icon2.open span:nth-child(2),
+#nav-icon2.open span:nth-child(5) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
@@ -197,7 +241,8 @@ a:visited {
   top: 0px;
 }
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+#nav-icon3 span:nth-child(2),
+#nav-icon3 span:nth-child(3) {
   top: 18px;
 }
 
@@ -233,8 +278,7 @@ a:visited {
 
 /* Icon 4 */
 
-#nav-icon4 {
-}
+#nav-icon4 {}
 
 #nav-icon4 span:nth-child(1) {
   top: 0px;
@@ -281,4 +325,8 @@ a:visited {
   transform: rotate(-45deg);
   top: 39px;
   left: 8px;
+}
+
+.swiper-pagination-bullet-active {
+  background: #F37368 !important;
 }
